2006-12-12  Sven Schuetz

	* cimXmlGen.c, objectImpl.c:
	Fixed 1613933: embedded Objects in Indications do not work

2006-12-12  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* array.c, providerMgr.c: 
	Fixed 1613925: use of non-tracked array operations allows
	to release the array of provider-infos properly.

2006-12-06  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* Makefile.am, libsfcUtil.Versions:
	Fixed 1610514: aligned sfcc/sfcb libsfcUtil

2006-12-05  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* instance.c: 
	Fixed 1609711: segfault during default property population of
	instances of undefined class.

2006-12-03  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* instance.c: 
	Postfix for 1605216: removed memory leak.

2006-11-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* classProvider.c, classProviderGz.c, classProviderMem.c: 
	Fixed 1606013: prevent segfault with deepInheritance=false.

2006-11-29  Sven Schuetz
	* cimXmlOps.y, internalProvider.c, providerDrv.c, instance.c, indication.mof,
	native.h:
	Fixed 1605216: empty propertyList causes parser error
	
	* cimXmlOps.y:
	Fixed 1605234: parse error when IPARAMVALUE CLASSNAME is missing

2006-11-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* control.c, sfcBroker.c, README, man/sfcbd.1.pre.in: 
	Fixed 1603796: automatic provider grouping is now enabled by default.

	* configure.ac, Makefile.am: 
	Minor enhancements for build systems without bison and multi-processor
	compiles.

2006-11-24  Adrian Schuur, Viktor Mihajlovski

	* args.c, cimXmlParser.c, cimXmlParser.h, classProvider.c, 
	classProviderGz.c, classProviderMem.c, cmpios.h, configure.ac, 
	constClass.c, fileRepository.c, objectImpl.c, objectImpl.h,
	providerDrv.c, providerMgr.c, providerMgr.h, qualifier.c, result.c:
	Fixed 1414618: corrected a bunch of platform dependencies: mainly sizes,
	alignment and endianness in the object implementation.
