@@ -137,7 +137,7 @@ static CMPIBoolean __beft_classPathIsA(const CMPIBroker * broker,
 
    _SFCB_ENTER(TRACE_ENCCALLS,"classPathIsA");
 
-   if (clsn && clsn->hdl) {
+   if (clsn && clsn->hdl && type) {
       if (strcasecmp(type, (char *) clsn->hdl) == 0)
          _SFCB_RETURN(1);
    }
@@ -146,7 +146,7 @@ static CMPIBoolean __beft_classPathIsA(const CMPIBroker * broker,
    ns = (char *) opGetNameSpaceChars(cop);
    cc = (CMPIConstClass *) getConstClass(ns, opGetClassNameChars(cop));
 
-   if (cc) for (; (scn = (char *) cc->ft->getCharSuperClassName(cc)) != NULL;) {
+   if (cc && type) for (; (scn = (char *) cc->ft->getCharSuperClassName(cc)) != NULL;) {
       if (strcasecmp(scn, type) == 0) return 1;
       cc = (CMPIConstClass *) getConstClass(ns, scn);
       if (cc == NULL) break;
